# bazel-tools

./: .editorconfig  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE
.bazelci/: presubmit.yml
buildozer/: BUILD.bazel  README.md  def.bzl  deps.bzl  runner.bash.template
buildozer/docs/: BUILD.bazel  buildozer_rule.md
file_hash/: BUILD.bazel  README.md  def.bzl  main.go
goimports/: README.md  def.bzl  deps.bzl  runner.bash.template
golangcilint/: BUILD.bazel  README.md  def.bzl  deps.bzl  golangcilint.build.bazel  runner.bash.template
gometalinter/: README.md  def.bzl  deps.bzl  gometalinter.build.bazel  runner.bash.template
gorevive/: README.md  def.bzl  deps.bzl  revive.BUILD.bazel  runner.bash.template
gorevive/example/: BUILD.bazel  WORKSPACE  defaults.toml
gotemplate/: BUILD.bazel  README.md  def.bzl  deps.bzl  main.go
hash/: BUILD.bazel  README.md  def.bzl  main.go
multirun/: BUILD.bazel  README.md  def.bzl  deps.bzl  main.go  multirun.go  process.go
multirun/test/: BUILD.bazel  cat.sh  cat1.txt  cat2.txt  echo.sh  echo_env.sh  exit.sh  expected_command_cat.txt  expected_command_generated_executable.txt  expected_failure.txt  expected_multirun_cat.txt  expected_multirun_generated_executable.txt  expected_parallel_failure.txt  expected_parallel_sigint.txt  expected_parallel_sigterm.txt  expected_parallel_success.txt  expected_parallel_tagged_success.txt  expected_sigint.txt  expected_sigterm.txt  expected_success.txt  run_and_kill.sh  sleep_and_exit.sh  test_compare_content.sh
rjsone/: BUILD.bazel  README.md  def.bzl  deps.bzl  runner.sh
