sh_binary(
    name = "linter",
    srcs = ["golangcilint"],
    data = [":linters"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linters",
    srcs = [
        "deadcode",
        "dupl",
        "errcheck",
        "gochecknoglobals",
        "gochecknoinits",
        "goconst",
        "gocyclo",
        "goimports",
        "golint",
        "gosec",
        "gosimple",
        "gotype",
        "ineffassign",
        "interfacer",
        "lll",
        "maligned",
        "megacheck",
        "misspell",
        "nakedret",
        "safesql",
        "staticcheck",
        "structcheck",
        "unconvert",
        "unparam",
        "unused",
        "varcheck",
    ],
    visibility = ["//visibility:public"],
)
