sh_binary(
    name = "linter",
    srcs = ["gometalinter"],
    data = [":linters"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linters",
    srcs = [
        "deadcode",
        "dupl",
        "errcheck",
        "gas",
        "goconst",
        "gocyclo",
        "goimports",
        "golint",
        "gometalinter",
        "gosimple",
        "gotype",
        "govet",
        "ineffassign",
        "interfacer",
        "lll",
        "maligned",
        "megacheck",
        "misspell",
        "nakedret",
        "safesql",
        "staticcheck",
        "structcheck",
        "unconvert",
        "unparam",
        "unused",
        "varcheck",
    ],
    visibility = ["//visibility:public"],
)
