load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/bazel-tools/gotemplate",
    visibility = ["//visibility:private"],
    deps = [
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "gotemplate",
    embed = [":go_default_library"],
    msan = "off",
    pure = "on",
    race = "off",
    static = "off",
    visibility = ["//visibility:public"],
)
